<resources>
    <string name="app_name">TaxPot</string>
    <string name="title_activity_maps">@string/app_name</string>
    <string name="default_search_text">Suchen...</string>
    <string name="comment_button">Kommentare</string>
    <string name="rating_button">Bewertungen</string>
    <string name="rate_button">Bewerten</string>
    <string name="streetName">Hasengasse 4</string>
    <string name="stellenplatzanzahl">Stellenplatzanzahl:</string>
    <string name="zeitraum">Zeitraum:</string>
    <string name="no_entries_found">Kein Eintrag gefunden</string>
    <string name="driver">Freundliche Fahrer</string>
    <string name="driver2">Fahrer</string>
    <string name="safe">Sicheres Umfeld</string>
    <string name="safe2">Umfeld</string>
    <string name="taxiCount">Viele Taxis</string>
    <string name="day">Tag</string>
    <string name="night">Night</string>
    <string name="cancel">Abbrechen</string>
    <string name="filter">Filter</string>
    <string name="to_filter">Filtern</string>
    <string name="post">Post</string>
    <string name="zero_double">0.0</string>
    <string name="generic_avg_rating">%.1f/5.0</string>
    <string name="taxiCount2">Anzahl an Taxis</string>
    <string name="number">"3"</string>
    <string name="addComment">Kommentar hinzufügen</string>
    <string name="comment1">Sichere Gegend, viele Menschen unterwegs. Viele Taxis vorhanden</string>
    <string name="comment2">Fahrer sehr nett, sind lustige Gesprächspartner. Warteschlange, falls man am Abend ein Taxi haben will.</string>
    <string name="time">"10:00"</string>
    <string name="finish">Fertig</string>

    <string name="rating_submitted">Ihre Bewertung wurde abgegeben. Danke!</string>
    <string name="rating_not_submitted">Ihre Bewertung konnte nicht abgegeben werden.</string>
    <string name="taxi_reported">Der Taxistand wurde gemeldet. Danke!</string>

    <string name="report_title">Neuen Taxistand Melden</string>
    <string name="address">Adresse</string>
    <string name="timeframe">Zeitraum von</string>
    <string name="timeframe2">Zeitraum bis</string>
    <string name="taxiPlaceCount">Stellenplatzanzahl</string>
    <string name="report_Btn">Melden</string>

    <string name="default_val">keine Daten vorhanden</string>
    <string name="null_value">null</string>

    <string name="internet_connection_lost">Es konnte keine Verbindung zum Netzwerk hergestellt werden</string>
    <string name="close_txt">Schließen</string>
    <string name="no_permission">Um diese App verwenden zu können, muss die App auf Ihre Standortdaten zugreifen dürfen.</string>
    <string name="on_request_fail_message">Es ist leider ein Fehler aufgetreten.</string>
    <string name="google_directions_url">https://maps.googleapis.com/maps/api/directions/json?</string>
    <string name="google_navigation_url">google.navigation:</string>
    <string name="datagv_url">http://data.wien.gv.at/daten/geo?service=WFS&amp;request=GetFeature&amp;version=1.1.0&amp;typeName=ogdwien:TAXIOGD&amp;srsName=EPSG:4326&amp;outputFormat=json</string>
</resources>
