<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_ratings"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/card_container"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        app:cardBackgroundColor="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                android:id="@+id/header_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/taxpot_yellow"
                app:cardElevation="@dimen/header_elevation">

                <RelativeLayout
                    android:id="@+id/header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/detail_fragment_marginLeft">

                    <TextView
                        android:id="@+id/streetName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:text="@string/streetName"
                        android:textColor="@color/black"
                        android:textSize="@dimen/detailfragment_header"
                        tools:ignore="SpUsage" />

                    <TextView
                        android:id="@+id/parkingSpace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/streetName"
                        android:text="@string/stellenplatzanzahl" />

                    <TextView
                        android:id="@+id/serviceTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@+id/parkingSpace"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignRight="@+id/parkingSpace"
                        android:layout_below="@+id/parkingSpace"
                        android:text="@string/zeitraum" />

                    <TextView
                        android:id="@+id/parkingSpaceValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/parkingSpace"
                        android:layout_alignBottom="@+id/parkingSpace"
                        android:layout_marginLeft="@dimen/detail_fragment_marginLeft"
                        android:layout_toEndOf="@+id/parkingSpace"
                        android:layout_toRightOf="@+id/parkingSpace"
                        android:text="@string/number"
                        tools:ignore="RtlHardcoded" />

                    <TextView
                        android:id="@+id/serviceTimeValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/serviceTime"
                        android:layout_alignBottom="@+id/serviceTime"
                        android:layout_marginLeft="@dimen/detail_fragment_marginLeft"
                        android:layout_toEndOf="@+id/serviceTime"
                        android:layout_toRightOf="@+id/serviceTime"
                        android:text="@string/time"
                        tools:ignore="RtlHardcoded" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:id="@+id/comments_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/postCommentBtn"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/header_container"
                android:layout_marginLeft="@dimen/detail_fragment_marginLeft"
                android:layout_marginRight="@dimen/detail_fragment_marginLeft"
                android:layout_marginTop="@dimen/detail_fragment_marginLeft"
                android:orientation="vertical">

                <ScrollView
                    android:id="@+id/comment_section"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="UselessParent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/comment1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="15dp"
                            android:paddingLeft="20dp"
                            android:paddingTop="15dp"
                            android:text="@string/comment1"
                            tools:ignore="RtlHardcoded,RtlSymmetry" />

                        <TextView
                            android:id="@+id/comment2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="15dp"
                            android:paddingLeft="20dp"
                            android:paddingTop="15dp"
                            android:text="@string/comment2"
                            tools:ignore="RtlHardcoded,RtlSymmetry" />
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>

            <Button
                android:id="@+id/postCommentBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/comments_container"
                android:layout_alignParentBottom="true"
                android:layout_alignRight="@+id/comments_container"
                android:text="@string/post"
                android:textSize="@dimen/detailfragment_text"
                tools:ignore="SpUsage" />

            <EditText
                android:id="@+id/own_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/comments_container"
                android:layout_alignStart="@+id/comments_container"
                android:layout_below="@+id/comments_container"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/addComment" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>