<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardElevation="24dp">


        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="357dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <android.support.v7.widget.CardView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/taxpot_yellow"
                app:cardElevation="@dimen/header_elevation">

                <TextView
                    android:id="@+id/report_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_margin="@dimen/square_button_padding"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/report_title"
                    android:textColor="@color/black"
                    android:textSize="@dimen/detailfragment_header"
                    tools:ignore="SpUsage,TextViewEdits" />
            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/report_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/report_Btn"
                android:textSize="@dimen/detailfragment_text"
                tools:ignore="SpUsage" />

            <EditText
                android:id="@+id/input_box_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="31dp"
                android:ems="10"
                android:hint="@string/address"
                android:inputType="textPostalAddress"
                android:layout_below="@+id/header"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <EditText
        android:id="@+id/input_box_timeframe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/timeframe"
        android:inputType="time"
        android:layout_alignBottom="@+id/input_box_taxiPlaceCount"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="83dp" />

    <EditText
        android:id="@+id/input_box_taxiPlaceCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/taxiPlaceCount"
        android:inputType="number"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="78dp" />

</RelativeLayout>