<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardElevation="24dp">


        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="195dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <android.support.v7.widget.CardView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/taxpot_yellow"
                app:cardElevation="@dimen/header_elevation">

                <TextView
                    android:id="@+id/streetname_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_margin="@dimen/square_button_padding"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/streetName"
                    android:textColor="@color/black"
                    android:textSize="@dimen/detailfragment_header"
                    tools:ignore="SpUsage,TextViewEdits" />

            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/distance_in_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/ratingBar"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingTop="@dimen/detailfragment_text"
                android:text="@string/number"
                android:textColor="@color/cast_libraries_material_featurehighlight_outer_highlight_default_color"
                android:textSize="@dimen/detailfragment_text"
                tools:ignore="SpUsage,TextViewEdits" />

            <Button
                android:id="@+id/rating_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/report_button"
                android:layout_toLeftOf="@+id/report_button"
                android:layout_toStartOf="@+id/report_button"
                android:text="@string/rating_button"
                android:textSize="@dimen/detailfragment_text"
                tools:ignore="SpUsage" />

            <Button
                android:id="@+id/report_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/comment_button"
                android:textSize="@dimen/detailfragment_text"
                tools:ignore="SpUsage" />

            <RatingBar
                android:id="@+id/ratingBar"
                style="@style/Widget.AppCompat.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="4"
                android:layout_below="@+id/header"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/header"
                android:layout_marginTop="11dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/zero_double"
                android:textSize="@dimen/detailfragment_text"
                tools:ignore="SpUsage,TextViewEdits" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>